<resources>
    <string name="column_key_employee_id">EmployeeID</string>
    <string name="column_key_last_name">LastName</string>
    <string name="column_key_first_name">FirstName</string>
    <string name="column_key_active">Active</string>
    <string name="column_key_current">Current</string>
    <string name="column_key_doc_exp">DocExp</string>
    <string name="column_key_status">Status</string>
    <string name="column_key_company">Company</string>
    <string name="column_key_location">Location</string>
    <string name="column_key_job">Job</string>
    <string name="column_key_group_id">GroupID</string>
    <string name="column_key_group_name">GroupName</string>
    <string name="column_key_supervisor">Supervisor</string>
    <string name="column_key_date">Date</string>
    <string name="column_key_lunch">Lunch</string>
    <string name="column_key_hours">Hours</string>
    <string name="column_key_minutes">Minutes</string>
    <string name="column_key_timein">TimeIn</string>
    <string name="column_key_timeout">TimeOut</string>
    <string name="column_key_comments">Comments</string>
    <string name="column_key_no_selection">-</string>
    <string name="column_key_name">Name</string>
    <string name="column_key_sunday">Sunday</string>
    <string name="column_key_monday">Monday</string>
    <string name="column_key_tuesday">Tuesday</string>
    <string name="column_key_wednesday">Wednesday</string>
    <string name="column_key_thursday">Thursday</string>
    <string name="column_key_friday">Friday</string>
    <string name="column_key_saturday">Saturday</string>
    <string name="date_time_format">yyyy/MM/dd HH:mm:ss</string>
    <string name="date_YMD_format">yyyy/MM/dd</string>
    <string name="date_MDY_format">MM/dd/yyyy</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="column_view_employee_id">ID</string>
    <string name="column_view_last_name">Last Name</string>
    <string name="column_view_first_name">First Name</string>
    <string name="column_view_active">Active</string>
    <string name="column_view_current">Current</string>
    <string name="column_view_status">Status</string>
    <string name="column_view_inout">In/Out</string>
    <string name="column_view_company">Company</string>
    <string name="column_view_location">Location</string>
    <string name="column_view_job">Job</string>
    <string name="column_view_group_id">Group ID</string>
    <string name="column_view_group_name">Group Name</string>
    <string name="column_view_supervisor">Supervisor</string>
    <string name="column_view_date">Date</string>
    <string name="column_view_lunch">Lunch</string>
    <string name="column_view_hours">Hours</string>
    <string name="column_view_timein">Time In</string>
    <string name="column_view_timeout">Time Out</string>
    <string name="column_view_comments">Comments</string>
    <string name="column_view_group_number">Group #</string>
    <string name="column_view_group">Group</string>
    <string name="column_view_start_date">Start Date</string>
    <string name="column_view_end_date">End Date</string>
    <string name="column_view_name">Name</string>
    <string name="app_name">Touch Time - Smart Vision Works, LLC.</string>
    <string name="screen_name">Touch Time</string>
    <string name="administrator">Administrator</string>
    <string name="supervisor">Supervisor</string>
    <string name="employee">Employee</string>
    <string name="administrator_menu">Administrator Menu</string>
    <string name="supervisor_menu">Supervisor Menu</string>
    <string name="company_profile_menu">Company Profile</string>
    <string name="job_location_menu">Job and Location</string>
    <string name="employee_profile_menu">Employee Profile</string>
    <string name="work_group_menu">Workgroup</string>
    <string name="individual_punch_menu">Individual Punch</string>
    <string name="work_group_punch_menu">Workgroup Punch</string>
    <string name="daily_activity_menu">Daily Activity</string>
    <string name="report_review_menu">Review Activities</string>
    <string name="time_sheet_menu">Time Sheet</string>
    <string name="company_name_header">Company Name</string>
    <string name="company_profile_title">Company Profile</string>
    <string name="company_enter_name_message">Enter company name !</string>
    <string name="company_new_message">Create new company profile ?</string>
    <string name="company_update_message">Update company profile ?</string>
    <string name="company_duplicate_message">Company already exists, enter a new name ?</string>
    <string name="company_delete_confirm_message">Delete company permanently ?</string>
    <string name="company_file_not_found">Company profile is lost! Download again.</string>
    <string name="company_file_will_be_lost">Replace company profiles!  Are you sure ?</string>
        <string name="name_title_text">Name:</string>
        <string name="street_title_text">Street:</string>
        <string name="city_title_text">City:</string>
        <string name="state_title_text">State:</string>
        <string name="zip_code_title_text">Zip Code:</string>
        <string name="country_title_text">Country:</string>
        <string name="phone_title_text">Tel:</string>
        <string name="email_title_text">Email:</string>
        <string name="contact_title_text">Contact:</string>
    <string name="job_location_title">Location and Job Selection</string>
    <string name="company_location_job_selection_title">Company, Location and Job Selections</string>
    <string name="no_company_message">No company !</string>
    <string name="no_location_message">No Location !</string>
    <string name="no_job_message">No Job !</string>
    <string name="no_company_location_job_message">No company, location, or job !</string>
    <string name="hint_add_job_item">Enter a new job here ...</string>
    <string name="hint_add_location_item">Enter a new location here ...</string>
    <string name="employee_profile_title">Employee Profile</string>
    <string name="employee_confirm_delete_message">Delete employee permanently ?</string>
    <string name="empty_last_name_message">Last name cannot be empty !</string>
    <string name="empty_first_name_message">First name cannot be empty !</string>
    <string name="empty_take_photo_message">Touch the photo area to take a photo !</string>
    <string name="employee_assign_ID_message">Assign a new ID !</string>
    <string name="employee_new_ID_message">Create employee profile ?</string>
    <string name="employee_update_message">Update employee profile ?</string>
    <string name="employee_no_ID_message">Select an employee !</string>
    <string name="employee_empty_message">No employee assigned to group !</string>
    <string name="employee_enter_country_message">Enter new country ?</string>
    <string name="employee_enter_state_message">Enter new state/province ?</string>
    <string name="employee_enter_city_message">Enter new city ?</string>
    <string name="employee_add_new_message">Add New</string>
    <string name="employee_new_state_message">Add the new state ?</string>
    <string name="employee_new_city_message">Add the new city ?</string>
    <string name="employee_document_expired">Document expired, cannot be active !</string>
    <string name="employee_file_not_found">Employee profile is lost! Download again.</string>
    <string name="employee_file_will_be_lost">Replace employee profiles!  Are you sure ?</string>
        <string name="comma_title_text"> , </string>
        <string name="hourly_rate_title_text">Hourly Rate:</string>
        <string name="piece_rate_title_text">Piece Rate:</string>
        <string name="ss_number_title_text">SS#:</string>
        <string name="birth_date_title_text">DoB:</string>
        <string name="hire_date_title_text">DoHire:</string>
        <string name="expiration_title_text">Doc Exp:</string>
        <string name="active_title_text">Active</string>
        <string name="current_title_text">Current</string>
        <string name="hint_employee_comments_text">Comments</string>
    <string name="group_title">Work Group</string>
    <string name="group_new_message">Create work group ?</string>
    <string name="group_update_message">Update work group ?</string>
    <string name="group_confirm_delete_message">Delete work group permanently ?</string>
    <string name="group_select_message">Select a work group !</string>
    <string name="group_name_empty_message">Group name cannot be empty !</string>
    <string name="group_invalid_employee">Assign inactive or not current employees ?</string>
    <string name="group_save_selection">Save selections ?</string>
    <string name="group_select_employee">Select employees for group </string>
    <string name="group_not_found">Group file is lost! Download again.</string>
    <string name="group_will_be_lost">Replace group file!  Are you sure ?</string>
    <string name="group_multiple_groups">assigned to multiple groups</string>
        <string name="group_name_title_text">Group Name:</string>
        <string name="supervisor_title_text">Supervisor:</string>
        <string name="shift_title_text">Shift Name:</string>
    <string name="employee_punch_title">Employee Punch In/Out</string>
    <string name="no_employee_message">No employee !</string>
    <string name="employee_not_active">Employee not active !</string>
    <string name="employee_doc_expire">Employee not current or document expired !</string>
    <string name="employee_punch_in_message">Punch in employee ?</string>
    <string name="employee_punch_out_message">Punch out employee ?</string>
    <string name="employee_already_punched_in_message">Employee already punched in !</string>
    <string name="employee_already_punched_out_message">Employee already punched out !</string>
    <string name="employee_must_punch_out_message">Employee must be punched out first !</string>
    <string name="employee_must_punch_in_message">Employee has not punched in. Punch in now ?</string>
    <string name="employee_group_not_punch_in_message">Group is not punched in, punch in employee anyway ?</string>
    <string name="employee_punch_in_same_job_message">Punch in to the same job as the group ?</string>
    <string name="employee_punch_in_different_job_message">Punch in to a different job from the group ?</string>
    <string name="employee_group_already_punch_out_message">Group already punched out, punch out employee as well ?</string>
    <string name="employee_punch_out_same_job_message">Punch out from the same job as the group ?</string>
    <string name="employee_punch_out_different_job_message">Punch out from a different job from the group ?</string>
    <string name="employee_are_not_changed_message">Punched in employees are not changed !</string>
    <string name="employee_out_punch_in_message">Punched out employees will be punched in !</string>
    <string name="employee_move_job">Employee already punched in ! Move to a new job ?</string>
    <string name="employee_same_job">Selected the same job ! No actions taken !</string>
    <string name="group_punch_title">Group Punch In/Out</string>
    <string name="group_id_view">Group ID</string>
    <string name="group_name_view">Group Name</string>
    <string name="no_work_group_message">No work group !</string>
    <string name="assign_work_group_message">Assign company, location, and job to work group ?</string>
    <string name="company_select_message">Select a company !</string>
    <string name="group_punch_in_message">Punch in group ?</string>
    <string name="button_company">Company</string>
    <string name="button_new">New</string>
    <string name="button_del">Delete</string>
    <string name="button_upd">Update</string>
    <string name="button_copy_to">Copy To</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
</resources>