<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/sort_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:paddingLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/column_key_id"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:onClick="onSortIDButtonClicked"
        android:gravity="center" />

    <Button
        android:id="@+id/sort_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/roundshapebtn"
        android:text="@string/column_key_last"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:clickable="true"
        android:onClick="onSortLastNameButtonClicked"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingLeft="5dp"
        android:text="@string/column_key_first"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:text="@string/column_key_group"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/button_company"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/column_key_location"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/column_key_job"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:text="@string/column_key_date"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:text="@string/column_key_timein"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:text="@string/column_key_timeout"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/column_key_lunch"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/column_key_hours"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/column_key_supervisor"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/column_key_comments"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold|italic"
        android:background="@color/svw_orange"
        android:textColor="@color/svw_black"/>

</LinearLayout>