<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="?android:attr/activatedBackgroundIndicator">

    <TableRow
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/import_employee"
            android:text="@string/button_import"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onImportButtonClicked"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/export_employee"
            android:text="@string/button_export"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onExportButtonClicked"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/delete_employee"
            android:text="@string/button_del"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onDeleteButtonClicked"
            android:layout_gravity="center" />

        <Button
            android:text="@string/button_upd"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onUpdateButtonClicked"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_new"
            android:text="@string/button_new"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onAddButtonClicked"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_copy_to"
            android:text="@string/button_copy_to"
            android:textSize="@dimen/medium_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:onClick="onAddButtonClicked"
            android:layout_gravity="center" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/sort_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:text="@string/column_view_employee_id"
            android:textSize="@dimen/medium_text_size"
            android:clickable="true"
            android:onClick="onSortIDButtonClicked" />

        <Button
            android:id="@+id/sort_last_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundshapebtn"
            android:text="@string/column_view_last_name"
            android:textSize="@dimen/medium_text_size"
            android:clickable="true"
            android:onClick="onSortLastNameButtonClicked"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:layout_marginRight="5dp"
            android:text="@string/column_view_first_name"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/svw_black"
            android:background="@color/svw_orange"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:layout_marginRight="5dp"
            android:text="@string/column_view_active"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/svw_black"
            android:background="@color/svw_orange"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
             android:text="@string/column_view_current"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/svw_black"
            android:background="@color/svw_orange"
            android:gravity="center" />

    </TableRow>
    <ListView
        android:id="@+id/employee_profile_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13.5"
        android:background="@drawable/list_view_border"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="5dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"/>

</LinearLayout>