<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/svw_cyan"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/main_menu"
        android:textSize="@dimen/sub_title_size"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/administrator_menu"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic"
        android:textColor="@color/svw_blue"
        android:layout_weight="1.3" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="6">
        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/company_profile_menu"
                android:text="@string/company_profile_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="CompanyProfileMenu"
                />
            <Button
                android:text="@string/job_location_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="CompanyJobLocationMenu" />
            <Button
                android:text="@string/employee_profile_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="EmployeeProfileMenu" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <Button
                android:text="@string/work_group_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="WorkGroupMenu" />
            <Button
                android:text="@string/work_group_punch_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="WorkGroupPunchMenu" />
            <Button
                android:text="@string/individual_punch_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="EmployeePunchMenu" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <Button
                android:text="@string/daily_activity_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="DailyActivityMenu" />
            <Button
                android:text="@string/report_review_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="ReportReviewMenu" />
            <Button
                android:text="@string/time_sheet_menu"
                android:textSize="@dimen/sub_button_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundshapebtn"
                android:onClick="TimeSheetMenu" />
        </TableRow>

    </TableLayout>

</LinearLayout>