<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/svw_cyan"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:textSize="@dimen/large_text_size"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/screen_name"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic"
        android:textColor="@color/svw_blue"
        android:layout_weight="1" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">
            <Button
                android:text="@string/administrator"
                android:textSize="@dimen/medium_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/roundshapebtn"
                android:layout_marginRight="10dp"
                android:onClick="AdministratorMenu" />
            <Button
                android:text="@string/supervisor"
                android:textSize="@dimen/medium_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/roundshapebtn"
                android:onClick="SupervisorMenu"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            />
            <Button
                    android:text="@string/employee"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/roundshapebtn"
                    android:onClick="EmployeeMenu"
             />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>